--- a/RegistrationLogin/RegistrationLogin/build.gradle
+++ b/RegistrationLogin/RegistrationLogin/build.gradle
@@ -16,19 +16,21 @@ java {
 repositories {
 	mavenCentral()
 }
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'mysql:mysql-connector-java:8.0.28'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.security:spring-security-crypto:5.7.0'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		runtimeOnly 'com.h2database:h2'
+		runtimeOnly 'mysql:mysql-connector-java:8.0.28'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+		implementation 'org.springframework.boot:spring-boot-starter-validation'
+		implementation 'org.springframework.security:spring-security-core:5.7.0' // Added this dependency
+		implementation 'org.springframework.security:spring-security-crypto:5.7.0'
+
+
+
 }
-
-
 
 tasks.named('test') {
 	useJUnitPlatform()
